Fix main alignment

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@
 
 body {
     margin: 0 auto;
-    align-items: center;
     height: 100vh;
     width: 100vw;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6em;
+    background-color: #fff;
+    color: #111;
 }
 
 .header {
@@ -40,8 +41,9 @@ nav {
     justify-content: space-evenly;
 }
 
-.main {
+main {
     margin-top: 100px;
+    padding: 2px;
     width: 100%;
     display: grid;
     place-content: center;
@@ -56,7 +58,16 @@ article {
     width: 33%;
     padding: 20px;
  }
+ .listen, 
+ .calendar, 
+ .contact {
+     width: 75vw;
+ }
 
+ section:nth-child(odd) {
+    background-color: #ccc;
+    padding: 20px 20px 30px 20px;
+}
 /* TYPOGRAPHY */
 .title-home, 
 .hero,
